# dnd_helper

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  Makefile  README.md  manage.py  mypy.ini  pyproject.toml  requirements.txt  setup.cfg  whitelist.py
base/: admin.py  apps.py  constants.py  dice.py  exceptions.py  fields.py  forms.py  helpers.py  managers.py  models.py  npc.py  tests.py  urls.py  views.py
base/admin/: __init__.py  admin_class.py  admin_classes.py  base_admin_classes.py  constants.py  forms.py
base/constants/: base.py  constants.py  subclass.py
base/fixtures/: abilities.json  books.json  skills.json
base/forms/: npc.py  power.py
base/migrations/: 0001_initial.py  0002_alter_bonus_power_alter_power_action_type.py  0002_alter_npc_trained_skills_alter_npc_var_bonus_ability.py  0002_alter_race_options.py  0002_armortype_alter_magicitemtype_options_and_more.py  0002_auto_20201108_0632.py  0002_auto_20201201_2113.py  0002_auto_20210319_0843.py  0002_auto_20211207_1845.py  0002_book_booksource.py  0002_class_default_powers_subclass_default_powers.py  0002_class_hit_points_per_level_and_more.py  0002_delete_handsslotitem_npc_no_hand_handsslotitem_and_more.py  0002_encounter_turn_number.py  0002_initial.py  0002_remove_availabilitycondition_default_feats_and_more.py  0002_remove_bonus_subclass_fk_bonus_subclass_and_more.py  0002_rename_is_sociable_race_is_social.py  0002_weapontype_prof_bonus.py  0003_alter_armortype_options_alter_powerproperty_options.py  0003_alter_availabilitycondition_constraint_and_more.py  0003_alter_bonus_bonus_type_alter_power_damage_type_and_more.py  0003_alter_book_options.py  0003_alter_condition_content_type_and_more.py  0003_alter_handsslotitem_options_and_more.py  0003_alter_magicitemtype_options_and_more.py  0003_alter_npc_powers.py  0003_alter_power_damage_type.py  0003_alter_power_range_type.py  0003_alter_race_size.py  0003_auto_20201108_1040.py  0003_auto_20201203_1339.py  0003_auto_20210319_0853.py  0003_feat.py  0003_magicitem_slots.py  0003_pcparty_npc_members_alter_pcparty_members.py  0003_race_available_weapon_types.py  0003_weaponstate_groups.py  0003_weapontype_dice_weapontype_dice_number.py  0004_abilitynew.py  (+582 more)
base/models/: __init__.py  abilities.py  abstract.py  bonuses.py  books.py  condition.py  defences.py  encounter.py  encounters.py  experience.py  feats.py  items.py  (+6 more)
dnd_helper/: asgi.py  settings.py  test_settings.py  urls.py  wsgi.py
docs/: ADMIN_NPC_GUIDE.md
encounters/: admin.py  apps.py  models.py
features/: admin.py  apps.py  models.py
generator/: admin.py  apps.py  constants.py  forms.py  helpers.py  models.py  urls.py  views.py
items/: admin.py  apps.py  models.py
printer/: admin.py  apps.py  constants.py  forms.py  models.py  urls.py  views.py
(+129 files in other folders)
