[build-system]
requires = ["poetry==1.0.8"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "dnd-helper"
description = ""
authors = ["Dmitry Bozhenko"]
version = "1.0.0"

[tool.poetry.dependencies]
python = "3.10.1"
Django = "^4.0.0"
django-multiselectfield = "^0.1.12"
pillow = "^9.0.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.7.0"
ipython = "^8.0.0"
flake8 = "^4.0.0"
mypy = "^0.931"
django-stubs = "^1.9.0"

[tool.black]
include = '\.py$'
skip-string-normalization = true
target-version = ['py38']
