[build-system]
requires = ["poetry==1.0.8"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "dnd-helper"
description = ""
authors = ["Dmitry Bozhenko"]
version = "1.0.0"

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.0.0"
django-multiselectfield = "^0.1.12"
pillow = "^11.0.0"

[tool.poetry.dev-dependencies]
black = "^24"
isort = "^5.7.0"
ipython = "^8.0.0"
flake8 = "^7.0.0"
mypy = "^1.0"
django-stubs = "^5.0.0"
pytest = "^8"
pytest-django = "^4"
vulture = "^2"

[tool.black]
include = '\.py$'
skip-string-normalization = true
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
combine_as_imports = true

[tool.flake8]
max-line-length = 88
exclude = [
    ".git",
    "__pycache__",
    "docs/source/conf.py",
    "old",
    "build",
    "dist",
    "*/migrations",
    "settings.py",
    "base/models/__init__.py"
]
ignore = ["W503", "E402"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "dnd_helper.settings"
python_files = "tests.py test_*.py"

